--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ img {
 
 .header-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .header-nav {
@@ -284,7 +285,7 @@ img {
 .first-section {
   background-color: var(--text-color);
   color: var(--white-color);
-  padding: 188px 0;
+  padding: 112px 0;
 
   max-width: 1440px;
   margin: 0 auto;
@@ -306,6 +307,19 @@ img {
         rgba(46, 47, 66, 0.7)),
       url('../images/bg_mob@2x.jpg');
   }
+}
+/* 
+@media screen and (min-width: 768px) {
+  .first-section {
+    padding: 112px 0;
+  }
+} */
+
+@media screen and (min-width: 1158px) { 
+  .first-section {
+    padding: 188px 0;
+  }
+}
 }
 
 @media only screen and (min-width: 429px) {
@@ -353,13 +367,46 @@ img {
 }
 
 .first-section-text {
-  font-size: 56px;
+  /* font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   min-height: 120px;
   margin: 0 auto;
-  max-width: 496px;
+  max-width: 496px; */
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+
+  min-height: 80px;
+  margin: 0 auto;
+  max-width: 320px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .first-section-text {
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    min-height: 120px;
+    margin: 0 auto;
+    max-width: 496px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .second-title {
+    font-size: 20px;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 8px;
+    text-align: left;
+  }
 }
 
 .first-section-button {
@@ -374,12 +421,19 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
-  margin: 48px auto 0;
+  margin: 72px auto 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (min-width: 1158px) {
+  .first-section-button {
+    margin: 48px auto 0;
+  }
+}
+
 
 .first-section-button:hover,
 .first-section-button:focus {
@@ -475,15 +529,18 @@ img {
   }
 }
 
-.second-list:not(:last-child) {
-  margin-bottom: 72px;
+@media screen and (max-width: 767px) {
+  .second-list:not(:last-child) {
+    margin-bottom: 72px;
+  }
 }
 
-@media screen and (min-width: 1158px) {
+
+/* @media screen and (min-width: 1158px) {
   .second-list:not(:last-child) {
     margin-bottom: 0;
   }
-}
+} */
 
 .second-section-icon {
   display: none;
@@ -1148,6 +1205,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  overflow: scroll;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1162,7 +1220,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%) scale(1);
   width: 408px;
   min-height: 584px;
   padding: 72px 24px 24px 24px;
@@ -1171,6 +1229,15 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 427px) {
+  .conteiner-modal {
+    top: 100px;
+    left: 160px;
+    width: 300px;
+    margin: 0 auto;
+  }
 }
 
 .type-modal {
@@ -1453,9 +1520,16 @@ button {
 }
 
 .menu-toggle {
-  position: absolute;
+  /* position: absolute;
   top: 24px;
-  right: 16px;
+  right: 16px; */
+  /* color: #fff; */
+}
+
+.menu-toggle {
+  /* position: absolute;
+  top: 24px;
+  right: 16px; */
   color: #fff;
 }
 
@@ -1499,6 +1573,12 @@ button {
   gap: 56px;
   justify-content: center;
   margin-top: 48px;
+}
+
+@media screen and (max-width: 427px) {
+  .modal-section-list {
+    gap: 24px;
+  }
 }
 
 .modal-link {
